# hello-dl

./: .gitignore  37learn.cc  CMakeLists.txt  README.md  array.hh  arraytests.cc  basic-autograd.cc  cnn-alphabet.hh  cnn1.hh  convo-alphabet.hh  first-convo.cc  first-relu.cc  fvector.hh  gru-layer.hh  gru.hh  grutest.cc  hello-dl.cc  hello-dl.ipynb  imagine.cc  img-ocr.cc  layers.hh  los.cc  los2.cc  los3.cc  misc.hh  mnistposter.cc  mnistreader.cc  mnistreader.hh  model.hh  modular-convo.cc  modular-linear-convo.cc  modular-threaded-convo.cc  tensor-convo-par.cc  tensor-convo.cc  tensor-gru.cc  tensor-layers.hh  tensor-relu.cc  tensor.cc  tensor2.hh  tensor2test.cc  (+15 more)
.github/workflows/: cmake.yml
alternate/: modular-convo.cc  modular-linear-convo.cc  tensor.cc  worker-convo-avx.cc  worker-convo.cc  workertest.cc
ext/sqlitewriter/: sqlwriter.cc  sqlwriter.hh
samples/: tensor-convo-20230122-final-gelu.state
